fixed navbar alignment: try 3

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,7 +6,7 @@ body {
   color: white;
 }
 ul.navbar {
-  float: right;
+  text-align: right;
   width: 100%;
   background-color: #D6D6D6;
   padding-top: 20px;
